# MuteX

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file.rs  mod.rs  mute.rs
src-tauri/src/errors/: app_error.rs  mod.rs
src-tauri/src/ffmpeg/: mod.rs  processor.rs  resolver.rs
src-tauri/src/utils/: path.rs
src/components/: dropzone.ts  filelist.ts  progressbar.ts
src/scripts/: api.ts  events.ts  main.ts  types.ts  ui.ts
src/styles/: main.css  tokens.css
